Fix styling on small devices for modal and form

--- a/src/components/Entry/EntryCard/EntryCard.module.css
+++ b/src/components/Entry/EntryCard/EntryCard.module.css
@@ -214,54 +214,25 @@ i {
     margin: 4rem;
 }
 
-.ingModifyContainer {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.ingridientContainer {
+    display: grid !important;
+    grid-template-columns: 5% 65% 30%;
     flex-basis: 100%;
-}
-
-.ingModifyContainer .ingDesc {
-    flex-grow: 1;
-    flex-basis: 50%;
 }
 
 .inputIngContainer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    flex-basis: 50%;
-    max-width: 50%;
 }
 
-.inputIngContainer:first-child {
-    flex-basis: 70%;
-    flex-grow: 1;
+.inputIngContainer li {
+    max-width: 70%;
+    flex-shrink: 1;
 }
 
-.inputIngContainer:last-child {
-    flex-basis: 30%;
-    flex-grow: 1;
-}
-
-.modifyContainer li {
-    list-style: armenian;
-}
-
-.ingDesc {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-}
-
-.ingDesc:first-child {
-    margin-right: 10px;
-    flex-basis: 5%;
-}
-
-.ingDesc:last-child {
-    flex-basis: 50%;
-    flex-grow: 1;
+.inputIngContainer li input {
+    max-width: 100%;
 }
 
 textarea {
