--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -52,5 +52,11 @@
     left: 0;
     width: 100%;
     max-width: 100%;
+    margin: 0;
+    height: 100vh;
+  }
+
+  .backdrop div {
+    margin: 0;
   }
 }
